[project]
name = "geo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "TLouf", email = "loufthomas@gmail.com"},
]
dependencies = [
    "numpy>=1.26.4",
    "geopandas>=0.14.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
