[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geo"
version = "0.1.0"
description = "General utils for geographic data handling."
authors = [
    {name = "TLouf", email = "loufthomas@gmail.com"},
]
dependencies = [
    "numpy>=1.26.4",
    "geopandas>=0.14.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
geo = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
