[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geo"
version = "0.1.0"
description = "General utils for geographic data handling."
authors = [
    {name = "TLouf", email = "loufthomas@gmail.com"},
]
dependencies = [
    "numpy>=1.26.4",
    "geopandas>=1.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
h3 = [
    "h3>=4.2.2",
]
geohash = [
  "pygeohash>=3.0.1",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
geo = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
geohash = { features = ["geohash"], solve-group = "default" }
h3 = { features = ["h3"], solve-group = "default" }
